# summary

./: CNAME  NV21_YUV420P.cpp  README.md  bash_config.info  close_windows_proxy.md  dcm2jpgche.sh  dcm_histogram.py  ff  find_repeat.sh  gcc_version.sh  h01_hello_world.py  hah.py  haha  hahha  hello.md  hello_config.py  hh.py  hha.py  linux.md  list_file.bat  list_time.py  main.py  make_html.py  meizitu.py  move-mysql-data-to-new-location.info  ncnn_cmake.sh  nihao.md  opencv_imshow.py  opencv_install.sh  outprint.py  pachong.py  remove_border_noise.cpp  roc_auc.py  search.py  std_image_read.c  string.py  stringio.py  svm_sacred.py  test_ctr.py  test_enum.py  (+1 more)
DSB2018/: README.md
Dynamic-Table/: README.md  functions.c  header  header.h  main.c  makefile
ImAligment/: Image Alignment.pptx  keypoints location.pptx  readme
ImageProcessing/: README.md
bat/: cd_cmd.bat  conda_cmd.bat  去除名字中空格.bat  定时备份拷贝数据.bat  拷贝数据文件.bat
c/: a.out  a.txt  area  array_rc.c  bit_op.c  bite_align.c  c_head.md  circle.c  classical_project.md  cmp.c  conio.h  current_work_dir.c  ddbug.c  detail.c  elswitch.c  equation.c  execure_order.c  fgets.c  five  five_bit_num.c  func  func.c  geek.c  get_cwd.c  getpc_info.c  ggets.c  hanoi.c  hello  hello.c  hi  inline.c  inout.c  interesting.c  is_supper.c  iterator.c  kbhit.c  mac  macros.c  main  mask.c  (+24 more)
cardio_throacic/: connect_area.py  morpho  (+1 more)
cpp/blur-detect-cpp/: CMakeLists.txt  Makefile  Makefile.cfg  Makefile.ini  blur_detection.cpp  blur_detection.h  main.cpp
durations/: CMakeLists.txt  test.cpp  test2.cpp  thread_create.cpp
(+297 files in other folders)
