cmake_minimum_required (VERSION 3) 
project(blur)
add_executable(blur main.cxx)
add_compile_options(-std=c++11) 
set(CMAKE_PREFIX_PATH "${CMAKE_SOURCE_DIR}/libs/opencv-install/lib/pkgconfig") 
find_package(PkgConfig REQUIRED) 
pkg_search_module(PKG_OPENCV REQUIRED opencv) 
add_executable(testopencv testopencv.cpp) 
include_directories(${PKG_OPENCV_INCLUDE_DIRS}) 
target_link_libraries (testopencv ${PKG_OPENCV_LDFLAGS})
